# rustillium

./: .gitignore  Cargo.toml  README.md  errors.txt
data/: cre.toml
secrets/: bank.toml  credit.toml  secretapp.toml  social.toml
src/: add_edit_dialog.rs  app_ui.rs  cache.rs  credentials_provider.rs  data.rs  delete_secret.rs  egui_ui.rs  gtk_ui.rs  main.rs  modify_secret.rs  totp_provider.rs  ui.rs
src/view_secret/: mod.rs  secret_section.rs
stories/: story1.txt  story10.txt  story11.txt  story12.txt  story13.txt  story14.txt  story15.txt  story2.txt  story3.txt  story4.txt  story5.txt  story6.txt  story7.txt  story8.txt  story9.txt
ui/: rustillum.glade  rustillum.ui  simple_dialog.ui
