[package]
name = "rustillium"
version = "0.3.0"
edition = "2024"

[dependencies]
gpgme = "0.11"
toml = "0.9"
config = "0.15"
eframe = { version = "0.33", features = ["wgpu"] }
git2 = "0.20"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"

[dependencies.totp-rs]
version = "^5.0"
features = ["otpauth"]
